--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.3",
     "nodemailer": "^7.0.11",
+    "openai": "^6.10.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
